created yahoo finance excel sheet

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5310b771",
    "metadata": {
     "collapsed": false,
@@ -23,14 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "b2899957",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocessing functions go here\n",
@@ -64,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "6cc599aa-4d0c-486e-bb23-c297cfd4bf58",
    "metadata": {
     "collapsed": false,
@@ -87,20 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d3b667e4-64ef-40c5-9850-1d679cda0d8d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[preprocess::extract emojis]\n",
-      "[preprocess::extract titles and body]\n",
-      "[preprocess::complete]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run preprocessing code\n",
     "def preprocess(f_in):\n",
@@ -122,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "cfc5a604",
    "metadata": {
     "collapsed": false,
@@ -141,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "id": "1bb54f0a",
    "metadata": {
     "tags": []
@@ -157,10 +142,10 @@
     "    for i, row in tickers_file.iterrows():\n",
     "        #print(row)\n",
     "        if not pd.isnull(row['Ticker']):\n",
-    "            row_ticker_list = row['Ticker'].replace('{','').replace('}','').replace('\\'', '').split(',')\n",
+    "            row_ticker_list = row['Ticker'].replace('{','').replace('}','').replace('\\'', '').strip().split(',')\n",
     "            #print(row_ticker_list)\n",
     "            for ticker in row_ticker_list:\n",
-    "                tickers_set.add(ticker)\n",
+    "                tickers_set.add(ticker.strip())\n",
     "            \n",
     "    #print(tickers_set)\n",
     "    \n",
@@ -181,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 73,
    "id": "b72f4984-3c56-4209-9b81-6f9df2c75035",
    "metadata": {},
    "outputs": [
@@ -189,17 +174,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  25 of 25 completed\n"
+      "[*********************100%***********************]  25 of 25 completed\n",
+      "{'PLTR', 'AMD', 'SPCE', 'RKT', 'REAL', 'AMC', 'DD', 'ONE', 'GME', 'TSLA', 'CRSR', 'BB', 'RH', 'CLOV', 'AM', 'NOK', 'WISH', 'BY', 'UWMC', 'MVIS', 'APP', 'NIO', 'TD', 'SNDL', 'AAL'}\n"
      ]
     }
    ],
    "source": [
-    "data, ticker_set = get_ticker_data('dataset/reddit_wsb.csv','dataset/ticker_location.csv')"
+    "data, ticker_set = get_ticker_data('dataset/reddit_wsb.csv','dataset/ticker_location.csv')\n",
+    "data.to_excel(\"tickerdata.xlsx\")\n",
+    "print(ticker_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "id": "9f85a8ce-d82f-41f1-857f-64f5eb2387cd",
    "metadata": {},
    "outputs": [
@@ -234,181 +222,22 @@
       "2021-08-12  159.880005  164.279999  157.330002  162.350006   1317800\n",
       "2021-08-13  160.470001  163.550003  157.410004  162.520004   1014800\n",
       "\n",
-      "[138 rows x 5 columns]\n",
-      "265.0\n",
-      "379.7099914550781\n",
-      "316.55999755859375\n",
-      "140.75999450683594\n",
-      "112.01000213623047\n",
-      "91.19000244140625\n",
-      "54.040000915527344\n",
-      "72.41000366210938\n",
-      "56.61000061035156\n",
-      "50.77000045776367\n",
-      "50.0099983215332\n",
-      "50.75\n",
-      "52.65999984741211\n",
-      "49.77000045776367\n",
-      "48.4900016784668\n",
-      "41.279998779296875\n",
-      "46.689998626708984\n",
-      "44.970001220703125\n",
-      "44.70000076293945\n",
-      "169.55999755859375\n",
-      "117.45999908447266\n",
-      "104.54000091552734\n",
-      "116.93000030517578\n",
-      "122.51000213623047\n",
-      "125.0\n",
-      "128.1699981689453\n",
-      "154.88999938964844\n",
-      "217.7100067138672\n",
-      "269.42999267578125\n",
-      "241.63999938964844\n",
-      "275.0\n",
-      "277.5199890136719\n",
-      "203.16000366210938\n",
-      "217.83999633789062\n",
-      "214.0\n",
-      "195.72999572753906\n",
-      "205.25999450683594\n",
-      "197.5\n",
-      "157.97999572753906\n",
-      "123.48999786376953\n",
-      "197.67999267578125\n",
-      "180.75\n",
-      "187.5\n",
-      "197.5\n",
-      "193.36000061035156\n",
-      "171.0\n",
-      "185.2100067138672\n",
-      "183.22000122070312\n",
-      "185.8800048828125\n",
-      "169.6999969482422\n",
-      "158.11000061035156\n",
-      "141.8800048828125\n",
-      "143.57000732421875\n",
-      "163.0\n",
-      "156.0\n",
-      "171.8000030517578\n",
-      "164.13999938964844\n",
-      "158.39999389648438\n",
-      "159.10000610351562\n",
-      "149.0\n",
-      "150.97999572753906\n",
-      "183.5500030517578\n",
-      "172.10000610351562\n",
-      "176.55999755859375\n",
-      "175.0\n",
-      "177.49000549316406\n",
-      "159.0\n",
-      "161.8300018310547\n",
-      "160.86000061035156\n",
-      "160.11000061035156\n",
-      "161.30999755859375\n",
-      "137.0\n",
-      "145.6999969482422\n",
-      "147.44000244140625\n",
-      "160.0\n",
-      "159.85000610351562\n",
-      "174.5399932861328\n",
-      "171.99000549316406\n",
-      "170.7899932861328\n",
-      "171.0\n",
-      "175.85000610351562\n",
-      "181.0\n",
-      "229.0\n",
-      "229.8000030517578\n",
-      "262.9700012207031\n",
-      "233.47999572753906\n",
-      "248.8800048828125\n",
-      "265.7099914550781\n",
-      "256.0199890136719\n",
-      "258.0\n",
-      "292.0\n",
-      "303.1199951171875\n",
-      "282.0\n",
-      "222.35000610351562\n",
-      "236.5\n",
-      "226.36000061035156\n",
-      "215.24000549316406\n",
-      "224.0\n",
-      "220.17999267578125\n",
-      "216.9499969482422\n",
-      "217.72999572753906\n",
-      "221.4499969482422\n",
-      "221.16000366210938\n",
-      "214.0\n",
-      "211.25\n",
-      "213.58999633789062\n",
-      "209.69000244140625\n",
-      "213.39999389648438\n",
-      "204.8000030517578\n",
-      "204.0\n",
-      "196.0\n",
-      "179.8300018310547\n",
-      "190.8800048828125\n",
-      "191.4199981689453\n",
-      "187.67999267578125\n",
-      "180.49000549316406\n",
-      "160.0\n",
-      "170.14999389648438\n",
-      "163.3000030517578\n",
-      "173.89999389648438\n",
-      "187.7899932861328\n",
-      "185.3000030517578\n",
-      "181.0\n",
-      "180.36000061035156\n",
-      "183.0\n",
-      "175.72000122070312\n",
-      "170.60000610351562\n",
-      "165.0\n",
-      "162.0\n",
-      "156.74000549316406\n",
-      "152.72999572753906\n",
-      "148.0\n",
-      "154.58999633789062\n",
-      "151.8000030517578\n",
-      "161.36000061035156\n",
-      "158.42999267578125\n",
-      "159.8800048828125\n",
-      "160.47000122070312\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'2021-01-28'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m/mnt/c/Users/anand/Documents/CS229/project/wsb-stock-prediction/env/lib/python3.8/site-packages/pandas/core/indexes/base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3620\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m/mnt/c/Users/anand/Documents/CS229/project/wsb-stock-prediction/env/lib/python3.8/site-packages/pandas/_libs/index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m/mnt/c/Users/anand/Documents/CS229/project/wsb-stock-prediction/env/lib/python3.8/site-packages/pandas/_libs/index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: '2021-01-28'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [58]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGME\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOpen\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(line)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mGME\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m2021-01-28\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "File \u001b[0;32m/mnt/c/Users/anand/Documents/CS229/project/wsb-stock-prediction/env/lib/python3.8/site-packages/pandas/core/frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3503\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3504\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3505\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3506\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3507\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m/mnt/c/Users/anand/Documents/CS229/project/wsb-stock-prediction/env/lib/python3.8/site-packages/pandas/core/indexes/base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3623\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3624\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3625\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3626\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3627\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3628\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: '2021-01-28'"
+      "[138 rows x 5 columns]\n"
      ]
     }
    ],
    "source": [
     "print(data['GME']['Open'] - data['GME']['Close'])\n",
     "print(data['GME'])\n",
-    "for line in data['GME','Open']:\n",
-    "    print(line)\n",
+    "#for line in data['GME','Open']:\n",
+    "#    print(line)\n",
     "    \n",
     "#print(data['GME']['2021-01-28'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "d0977c67-56db-478d-a84f-c059f30f1b70",
    "metadata": {},
    "outputs": [],
@@ -421,24 +250,79 @@
     "    data_tickers = pd.concat([file, tickers_file['Ticker']], axis=1)\n",
     "    condensed_file = data_tickers.dropna(subset=['Ticker'])\n",
     "    sorted_file = condensed_file.sort_values(['timestamp'],ascending=True)\n",
-    "    start_date = sorted_file.iloc[0]['timestamp'].split()[0]\n",
+    "    start_date_str = sorted_file.iloc[0]['timestamp'].split()[0]\n",
+    "    start_date = parser.parse(start_date_str)\n",
+    "    # Store the change in stock prices for each day\n",
+    "    ticker_deltas = {}\n",
+    "    for ticker in ticker_set:\n",
+    "        ticker_deltas[ticker] = data[ticker, 'Close'] - data[ticker, 'Open']\n",
     "    \n",
+    "    print(ticker_deltas['GME'][5])\n",
+    "    # Line up those changing stock prices with the dataset\n",
+    "    dataset_deltas = []\n",
     "    for i, row in tickers_file.iterrows():\n",
     "        if not pd.isnull(row['Ticker']):\n",
-    "            row_ticker_list = row['Ticker'].replace('{','').replace('}','').replace('\\'', '').split(',')\n",
-    "            date = row['timestamp'].split()[0]\n",
-    "            for ticker in row_ticker_list:"
+    "            row_ticker_list = row['Ticker'].replace('{','').replace('}','').replace('\\'', '').strip().split(',')\n",
+    "            date_str = file.iloc[i]['timestamp'].split()[0] # Rows correspond to each other\n",
+    "            date = parser.parse(date_str)\n",
+    "            \n",
+    "            # Get the date difference\n",
+    "            str_diff = str(date - start_date)\n",
+    "            datediff = 0\n",
+    "            if str_diff[0] == '0':\n",
+    "                datediff = 0\n",
+    "            else:\n",
+    "                datediff = int(str_diff.split()[0])\n",
+    "            ticker_dict = {}\n",
+    "            for ticker in row_ticker_list:\n",
+    "                check_ticker = ticker.strip()\n",
+    "                ticker_dict[check_ticker] = ticker_deltas[check_ticker][datediff]\n",
+    "            dataset_deltas.append(ticker_dict)\n",
+    "        else:\n",
+    "            dataset_deltas.append(None)\n",
+    "    print(dataset_deltas)\n",
+    "            \n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ff464a52-fb09-4028-8e86-0f56945a6ecf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-37.69000244140625\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 143 is out of bounds for axis 0 with size 138",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [69]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mappend_ticker_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mticker_set\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [68]\u001b[0m, in \u001b[0;36mappend_ticker_data\u001b[0;34m(data, ticker_set)\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m ticker \u001b[38;5;129;01min\u001b[39;00m row_ticker_list:\n\u001b[1;32m     34\u001b[0m         check_ticker \u001b[38;5;241m=\u001b[39m ticker\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m---> 35\u001b[0m         ticker_dict[check_ticker] \u001b[38;5;241m=\u001b[39m \u001b[43mticker_deltas\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcheck_ticker\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdatediff\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     36\u001b[0m     dataset_deltas\u001b[38;5;241m.\u001b[39mappend(ticker_dict)\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "File \u001b[0;32m/mnt/c/Users/anand/Documents/CS229/project/wsb-stock-prediction/env/lib/python3.8/site-packages/pandas/core/series.py:955\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    952\u001b[0m     key \u001b[38;5;241m=\u001b[39m unpack_1tuple(key)\n\u001b[1;32m    954\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(key) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39m_should_fallback_to_positional:\n\u001b[0;32m--> 955\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_values\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    957\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[1;32m    958\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_value(key)\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 143 is out of bounds for axis 0 with size 138"
+     ]
+    }
+   ],
+   "source": [
+    "append_ticker_data(data, ticker_set)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff464a52-fb09-4028-8e86-0f56945a6ecf",
+   "id": "933f6810-4ea9-47a6-8910-9b17c2718fb4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "append_ticker_data(data, ticker_set)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
